exome-results-browsers/bipex2-demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exome-results-browsers-ingress
  labels:
    service: exome-results-browsers
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
